# manus

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: Embed.cmake  FindOpenCVWindows.cmake
cmake/Toolchains/: MinGW.cmake
include/manus/: manipulator.h
msg/: apps.msg  config.msg  manipulator.msg  markers.msg  messages.msg  privileged.msg
python/: CMakeLists.txt  print_status.py  random_fk.py  random_ik.py  setup.py.in
python/manus/: __init__.py  manipulator.py  robot_arm.py
python/manus_apps/: __init__.py  __main__.py  blocks.py  launcher.py  workspace.py
python/manus_starter/: __init__.py  __main__.py
python/manus_starter/config/: __main__.py
python/manus_starter/ports/: __main__.py
python/manus_starter/privileged/: __init__.py  __main__.py  hardware.py  network.py  system.py
python/manus_webshell/: __init__.py  __main__.py  code_generator.py  code_template.py  code_template.tpl  generator.py  manipulator.py  markers.py  server.py  utilities.py
python/manus_webshell/cli/: __main__.py
python/manus_webshell/static/: blockly_loader.js  index.html  manus.css  manus.js  phoria.min.js  widgets.js  world.js
python/manus_webshell/static/blockly/blocks/: manus.js
python/manus_webshell/static/blockly/generators/python/: manus.js
python/manus_webshell/static/css/: manus.css
python/manus_webshell/static/data/: blockly-toolbox.xml
python/manus_webshell/static/js/: blockly-blocks-manus.js  blockly-python-manus.js  blockly_loader.js  jquery.js  manus.js  program.js  widgets.js  world.js
res/: calibration.xml  debug.js  index.html  manus.css  manus.js  template_simple.json  template_simple2.json  widgets.js  world.js
res/apps/sorting/: sorting.app  sorting.py
res/arboards/: blobs1.yml  board1.yml  board2.yml  simple.yml
res/defaults/: program_1.json  program_2.json  program_3.json
res/launch/: frontend.include  manus-full.spark  manus-nocamera.spark  manus-serial.spark  manus-simulator.spark  manus-virtual.spark
res/launch/virtual/: simulated.spark  virtual.spark
res/models/: manipulator1.yaml
src/: arm.cpp  arm.h  artrack.cpp  calibration.cpp  camera.cpp  camera.h  cameraserver.cpp  debug.cpp  debug.h  definitions.h  files.cpp  files.h  filesystem.cpp  filesystem.h  getopt.h  json.cpp  manipulator.cpp  manipulator.h  manus.cpp  markers.cpp  markers.h  mongoose.c  mongoose.h  openservorobot.cpp  openservorobot.h  pattern.cpp  pattern.h  planner.cpp  serial.cpp  serial.h  server.cpp  server.h  simulation.cpp  simulation.h  threads.h  utilities.cpp  utilities.h  voxelgrid.cpp  voxelgrid.h
web/: index.html  manus.css  manus.js
